<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/elevation"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/AppTheme.Toolbar"
        app:title="@string/activity_title_search" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/search_hint"
        android:imeActionLabel="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/normal_font" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/search" />
</RelativeLayout>